fixed overflow

--- a/landing-page/src/scss/index.scss
+++ b/landing-page/src/scss/index.scss
@@ -14,6 +14,7 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
